<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/general_section_title"
        android:text="@string/general_section"
        style="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/section_border"
        android:padding="2dp"
        android:id="@+id/general_section_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/general_section_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/canonical_name_title"
            android:id="@+id/canonical_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/canonical_name_value"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="some.canonical.name"
            app:layout_constraintTop_toTopOf="@id/canonical_name_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:text="@string/is_alias_title"
            android:id="@+id/is_alias_title"
            app:layout_constraintTop_toBottomOf="@id/canonical_name_title"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_alias_value"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"
            app:layout_constraintTop_toTopOf="@id/is_alias_title"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:id="@+id/is_encoder_title"
            app:layout_constraintTop_toBottomOf="@id/is_alias_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/is_encoder_title">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_encoder_value"
            style="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintTop_toTopOf="@id/is_encoder_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"
            tools:text="some.canonical.name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_hardware_accelerated_title"
            style="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toBottomOf="@id/is_encoder_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/is_hw_accel_title">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_hardware_accelerated_value"
            app:layout_constraintTop_toTopOf="@id/is_hardware_accelerated_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_software_only_title"
            style="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toBottomOf="@id/is_hardware_accelerated_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/is_sw_only_title">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_software_only_value"
            app:layout_constraintTop_toTopOf="@id/is_software_only_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_vendor_title"
            style="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toBottomOf="@id/is_software_only_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/is_vendor_value">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_vendor_value"
            app:layout_constraintTop_toTopOf="@id/is_vendor_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/supported_types_title"
            style="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toTopOf="@id/supported_types_scroll"
            app:layout_constraintBottom_toBottomOf="@id/supported_types_scroll"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/supported_types_title">
        </TextView>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/supported_types_scroll"
            app:layout_constraintTop_toBottomOf="@id/is_vendor_title"
            app:layout_constraintStart_toEndOf="@id/titles_barrier" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/supported_types_layout"
                android:orientation="vertical"
                tools:layout_height="36dp"
                tools:layout_width="64dp">

            </LinearLayout>
        </ScrollView>
        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titles_barrier"
            app:constraint_referenced_ids="canonical_name_title,is_alias_title,is_encoder_title,is_hardware_accelerated_title,is_software_only_title,is_vendor_title,supported_types_title"
            app:barrierDirection="end"
            app:barrierMargin="24dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="botaoz"
            app:layout_constraintTop_toBottomOf="@id/supported_types_scroll"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>